fixed spacing

--- a/quilt-react/src/about.css
+++ b/quilt-react/src/about.css
@@ -49,7 +49,7 @@
 
   .about-top-container {
     text-align: center;
-    margin: 10% auto;
+    margin: 10% auto 5% auto;
   }
 
   .about-top-container h1 {
